# distill

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  3c19fe70b3c6_add_unpacked_sections.py  45a1fe7ea7c4_add_feed_item_sub_items.py  6734c85554a0_add_image_url_columns.py  a1b2c3d4e5f6_add_user_settings_table.py  b2c3d4e5f6a7_add_content_attributes.py  bac83ad71b8f_add_llm_usage_table.py  f4a7b8c9d0e1_add_feed_sources_and_items.py
backend/app/: main.py
backend/app/api/: capture.py  digest.py  documents.py  feed.py  health.py  queue.py  rag.py  settings.py  stats.py
backend/app/core/: config.py  database.py  log_utils.py  security.py  task_router.py  usage_tracker.py
backend/app/models/: database.py
backend/app/services/: article_extractor.py  content_extractor.py  digest_processor.py  document_extractor.py  feed_service.py  knowledge_service.py  roundup_splitter.py  rss_fetcher.py  source_detector.py  text_processing.py  video_extractor.py
docs/: ai_patterns.md  architecture.md  implementation_plan.md  prd.md  tech_stack.md  ux_wireframes.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/digest/: page.tsx
frontend/src/components/: focused-topics.tsx  llm-indicator.tsx  navbar.tsx  reading-settings.tsx  stats-card.tsx  theme-provider.tsx
frontend/src/lib/: api.ts  settings-store.ts
(+6 files in other folders)
